Simplify and fix on tablet

--- a/openff_sphinx_theme/openff_sphinx_theme/sass/site.sass
+++ b/openff_sphinx_theme/openff_sphinx_theme/sass/site.sass
@@ -391,7 +391,6 @@ footer
 
 @media screen and (min-width: $fullhd - 1px)
     main
-        min-width: $fullhd
         max-width: $fullhd + 100px
         width: 100%
         margin-left: auto
